tests/integration/errors/tuple_destructure_too_few.rsg
// TEST: compile_error
// EXPECT-ERROR: tuple destructure requires 3 names but got 2

fn main() {
    t := (10, true, "hello")
    (x, flag) := t
}
